--- a/lab4/lab4_konopacka.Rmd
+++ b/lab4/lab4_konopacka.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Laboratorium 4"
 author: "Martyna Konopacka"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
